--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -17,3 +17,18 @@
 <!-- 🐨 Append the div to the root div using `append` -->
 <!--   💰 document.getElementById('root') -->
 <!--   📜 https://developer.mozilla.org/en-US/docs/Web/API/ParentNode/append -->
+
+<body>
+  <script type="module">
+    const rootElement = document.createElement('div')
+
+    rootElement.setAttribute('id', 'root')
+    document.body.append(rootElement)
+
+    const newElement = document.createElement("div");
+    newElement.textContent = 'Hello World'
+    newElement.className = 'container'
+
+    rootElement.append(newElement);
+  </script>
+</body>
